--- a/PrimeiroProjeto/pom.xml
+++ b/PrimeiroProjeto/pom.xml
@@ -9,6 +9,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
-        <exec.mainClass>br.uerj.eng.desc.introducao.EstudanteTeste</exec.mainClass>
+        <exec.mainClass>br.uerj.eng.desc.introducao.Teste</exec.mainClass>
     </properties>
 </project>
